# SIGMOD-Contest

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/efanna2e/: distance.h  index.h  index_graph.h  index_kdtree.h  neighbor.h  util.h
include/efanna2e/backup/: index_graph.cpp  neighbor.h
rep/: 1m.index  Heap.h
src/: index_graph.cpp  index_kdtree.cpp
tests/: CMakeLists.txt  faiss_train.cpp  heap_test.cpp  test_faiss.cpp  test_faiss_2.cpp  test_kdtree_graph.cpp  test_nndescent.cpp  test_nndescent_refine.cpp
